--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   geolocator: ^7.0.0
   http: ^0.13.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
